resources/insights-prod/xjoin-jenkins-prod/xjoin-jenkins.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jenkins-persistent
  name: xjoin-jenkins
spec:
  host: xjoin-jenkins.apps.crcp01ue1.o9m8.p1.openshiftapps.com
  to:
    kind: Service
    name: jenkins
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
